force-app/main/default/objects/Campaign/fields/Klaviyo_ID__c.field-meta.xml
<CustomField>
    <fullName>Klaviyo_ID__c</fullName>
    <externalId>true</externalId>
    <label>Klaviyo ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>