force-app/main/default/objects/Campaign/fields/Last_Meta_Sync_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Meta_Sync_At__c</fullName>
    <label>Last Meta Sync At</label>
    <type>DateTime</type>
</CustomField>