force-app/main/default/objects/Campaign/fields/Leads_From_Meta__c.field-meta.xml
<CustomField>
    <fullName>Leads_From_Meta__c</fullName>
    <label>Leads From Meta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>