force-app/main/default/objects/Campaign/fields/Lifetime_Budget__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Budget__c</fullName>
    <label>Lifetime Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>