force-app/main/default/objects/Campaign/fields/Meta_Ad_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_Account_Id__c</fullName>
    <label>Meta Ad Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>