force-app/main/default/objects/Campaign/fields/Meta_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Meta_Campaign_Id__c</fullName>
    <externalId>true</externalId>
    <label>Meta Campaign Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>