force-app/main/default/objects/Campaign/fields/Meta_Status__c.field-meta.xml
<CustomField>
    <fullName>Meta_Status__c</fullName>
    <label>Meta Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>