force-app/main/default/objects/Campaign/fields/Profile_s_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_s_URL__c</fullName>
    <label>Profile&apos;s URL</label>
    <type>Url</type>
</CustomField>